k8s/app-latest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-deployment
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld-latest
  template:
    metadata:
      labels:
        app: helloworld-latest
    spec:
      containers:
      - name: k8s-demo
        resources:
          requests:
            cpu: 200m
            memory: 0.5Gi
          limits:
            cpu: 400m
            memory: 1Gi
        image: __ACR__/node-app:111
        command: ["node", "index.js"]
        ports:
        - name: nodejs-port
          containerPort: 3000
