k8s/app-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld-v1
  template:
    metadata:
      labels:
        app: helloworld-v1
    spec:
      containers:
      - name: k8s-demo
        image: __ACR__/node-app:1.0.0
        command: ["node", "index.js"]
        ports:
        - name: nodejs-port
          containerPort: 3000
