k8s/database.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: hello-app
  name: database
  labels:
    app: database
spec:
  containers:
  - name: mysql
    resources:
      requests:
        cpu: 200m
        memory: 0.5Gi
      limits:
        cpu: 400m
        memory: 1Gi
    image: mysql:5.7
    ports:
    - name: mysql-port
      containerPort: 3306
