k8s/app-latest-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-latest-svc
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: helloworld-latest
  type: NodePort
