k8s/app-v1-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-v1-svc
  namespace: dev
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: helloworld-v1
  type: NodePort
