k8s/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: hello-app
spec:
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: database
  type: NodePort
