k8s/ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  type: LoadBalancer
  selector:
    app: ingress-nginx
